--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "bin": "cli.js",
   "dependencies": {
-    "thunky": "^0.1.0"
+    "thunky": "^0.1.0",
+    "es6-promise": "~2.1.0"
   },
   "devDependencies": {
     "standard": "^3.3.2",
